New File Browser doesn't remember the last display type #69460

Closed
opened 2019-09-03 23:09:41 +02:00 by William Reynish · 6 comments

System Information
Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.9.22

Blender Version
Broken: version: 2.81 (sub 5), branch: master (modified), commit date: 2019-09-03 20:34, hash: 5ba0ce8544
Worked: (Blender 2.80)

Short description of error
With the new File Browser, it doesn't remember the last chosen display type

Exact steps for others to reproduce the error

  • New default startup
  • Go to File > Save As
  • Set the display type to Thumbnails
  • Cancel
  • Go to File > Save As
  • The display type is back at List View again

This worked in Blender 2.80

**System Information** Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.9.22 **Blender Version** Broken: version: 2.81 (sub 5), branch: master (modified), commit date: 2019-09-03 20:34, hash: `5ba0ce8544` Worked: (Blender 2.80) **Short description of error** With the new File Browser, it doesn't remember the last chosen display type **Exact steps for others to reproduce the error** - New default startup - Go to File > Save As - Set the display type to Thumbnails - Cancel - Go to File > Save As - The display type is back at List View again This worked in Blender 2.80

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Julian Eisel was assigned by William Reynish 2019-09-03 23:10:02 +02:00

Added subscriber: @tintwotin

Added subscriber: @tintwotin

This could even be expanded, so it is not that last setting remembered, but the last setting for the file type, so ex. setting the font file browser to thumbnails, because that is the only setting where you can see the font style, doesn't affect the file browser settings for ex. add-ons(where you do not want thumbnails).

This could even be expanded, so it is not that last setting remembered, but the last setting for the file type, so ex. setting the font file browser to thumbnails, because that is the only setting where you can see the font style, doesn't affect the file browser settings for ex. add-ons(where you do not want thumbnails).
Member

The reason this doesn't work anymore is that the implementation only remembered the display type if opened from the same area. So just by changing the hovered area, you could break the display type memory.
Brecht brought up this per-editor behavior in D4479, but it was never really addressed.

I have an idea for global, permanent file browser storage in mind, in a way that we could store all kinds of other options (window size, sorting, etc). Will try implementing that tomorrow.

The reason this doesn't work anymore is that the implementation only remembered the display type if opened from the same area. So just by changing the hovered area, you could break the display type memory. Brecht brought up this per-editor behavior in [D4479](https://archive.blender.org/developer/D4479), but it was never really addressed. I have an idea for global, permanent file browser storage in mind, in a way that we could store all kinds of other options (window size, sorting, etc). Will try implementing that tomorrow.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added proper support for remembering file browser state, now stored within the Preferences, ddb157999e.

Added proper support for remembering file browser state, now stored within the Preferences, ddb157999e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69460
No description provided.