source/blender/blenloader/intern/versioning_userdef.c
@@ -29,6 +29,7 @@
 #include "DNA_curve_types.h"
 #include "DNA_windowmanager_types.h"
 #include "DNA_scene_types.h"
+#include "DNA_space_types.h"
 
 #include "BKE_addon.h"
 #include "BKE_colorband.h"
@@ -627,6 +628,10 @@ void BLO_version_defaults_userpref_blend(Main *bmain, UserDef *userdef)
    */
   {
     /* pass */
+    if (userdef->file_space_data.display_type == FILE_DEFAULTDISPLAY) {
+      memcpy(
+          &userdef->file_space_data, &U_default.file_space_data, sizeof(userdef->file_space_data));
+    }
   }
 
   if (userdef->pixelsize == 0.0f) {
